# python-twitter-premium

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yaml
testdata/models/: b.json  extended_tweets_data.json  retweets_data.json  user_data.json
tests/: test_models.py
twitter/: api.py
twitter/models/: __init__.py  base.py  entities.py  geo.py  place.py  token.py  tweet.py  user.py
twitter/testdata/models/: new_quota_tweet.json  quota_tweet_data.json  tweet_data.json
